# python-git-template

./: .dockerignore  .flake8  .gitattributes  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-linting.yml  publish.yml  pyCode-linting.yml  tests.yml
docs/: conf.py  index.md  requirements-doc.txt
docs/about/: installation.md  objective.md
pkg-name/: VERSION  __init__.py
pkg-name/api/: __init__.py
pkg-name/errors/: errors.py  warnings.py
pkg-name/testing/: __init__.py
tests/: __init__.py  test_package.py
