[build-system]
# minimum system requirements for the build system
requires = ["setuptools >= 80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# project metadata to be used and parsed by most backends
name = "pkg-name"

# dynamic tagging for version read directly from the VERSION file
dynamic = ["version"]

# set a list of authors for the project
authors = [
  {name = "Debmalya Pramanik (ZenithClown)", email = "dpramanik.official@gmail.com"}
]

# readme and project descriptions
readme = "README.md"
description = "A template repository to start building a Python package."

# python minimum version requirement, must be compatible
requires-python = ">= 3.10"

# license file, directly change the file to reflect changes
license = {file = "LICENSE"}

# runtime dependencies (currently none)
dependencies = []

# classifiers for the python package
# full classifiers list - https://pypi.org/classifiers/
classifiers = [
  # maturity/development status of the project
  "Development Status :: 4 - Beta",

  # license information can also be added as a classifier
  "License :: OSI Approved :: MIT License",

  # supported operating systems/os independent
  "Operating System :: OS Independent",

  # list of supported python versions
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
# a list of associated URLs that is displayed on the left sidebar
# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
Homepage   = "https://zenithclown.github.io/"
Repository = "https://github.com/ZenithClown/python-git-template"

[tool.setuptools.dynamic]
# read version directly from the VERSION file (avoids hyphen-in-module-name issues)
version = {file = "pkg-name/VERSION"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
